--- a/index.html
+++ b/index.html
@@ -89,23 +89,14 @@
 							<!-- Resume -->
 								<article id="resume">
 									<h2 class="major">Resume</h2>
-									<a href="https://jimmyminhlee.github.io/resume.pdf" target="blank">
+									<a href="https://voonybaboony.github.io/resume.pdf" target="blank">
 									<h3 class="major"> Link </h3>
-									<span class="image main"><img src="images/resume.jpg" alt=""/></span>
+									<span class="image main"><img src="resume.pdf" alt=""/></span>
 									</article>
 
 									<!-- Projects -->
 										<article id="projects">
 											<h1 class="major">Projects</h1>
-
-												<a href="https://github.com/JimmyMinhLee/Too-Many-Cooks" target="blank">
-												<h3> Too Many Cooks (C#, Unity) </h3>
-														<p> Worked alongside a team of 3 other students to build a working game in Unity that mimics Overcooked. Personally built in-game interactions between the player, enemies and cooking ingredients. </p>
-
-												<a href = "https://github.com/JimmyMinhLee/Betting-on-the-Blockchain" target="blank">
-												<h3> Betting on Blockchain (Solidity, JavaScript, HTML, CSS, Truffle, Ganache)</h3>
-													<p> Built a decentralized application on the Ropsten Test Network called “Betting on the Blockchain” that uses multiple blockchain 	frameworks to allow users to bet Ethereum in an online, casino-esque game. Worked alongside a partner to implement the logic 	behind the application, as well as integrating it onto a working front-end, ultimately deploying it onto the InterPlanetary File System. </p>
-
 												<a href = "https://github.com/JimmyMinhLee/Introduction-CompSci-Projects" target="blank">
 												<h3> Maps (Python) </h3>
 													<p> Built a python application that uses machine learning to match users with nearby restaurants in the Berkeley area. Back-end logic implemented in Python, using k-means grouping algorithm. Restaurant location and data provided by the yelp API. </p>
@@ -119,9 +110,9 @@
 						<!-- Contact -->
 						<article id="contact">
 							<h1 class="major">Contact</h1>
-							<h4>Email:jimmyminhlee@gmail.com</h4>
-							<h4>LinkedIn: <a href="http://linkedin.com/in/jimmy-lee-2ba18a174/">@JimmyMinhLee</a></h4>
-							<h4>Github: <a href="http://github.com/JimmyMinhLee">@JimmyMinhLee</a></h4>
+							<h4>Email:vkadikar@berkeley.edu</h4>
+							<h4>LinkedIn: <a href="http://linkedin.com/in/varunkadikar/">@VarunKadikar</a></h4>
+							<h4>Github: <a href="http://github.com/voonybaboony">@voonybaboony</a></h4>
 							</article>
 
 						<!-- Elements -->
