--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<h2 class="major"> Who is Varun? </h2>
 							<span class="image main"><img src="images/Varun.JPG" alt=""/></span>
 							<p>I'm currently a sophomore at the University of California, Berkeley pursuing a double major in Computer Science and Economics. I am intrigued by modern concepts such as the
-								<i>Internet of Things</i>, <i>Big Data</i>, and <i> Machine Learning </i>. I seek to work on innovative projects that create change in the tech industry. </p>
+								<i>Internet of Things</i>, <i>Big Data</i>, and <i> Machine Learning </i>. I seek to work on innovative projects that disrupt the tech industry. </p>
 
 							<p>I grew up in a quiet town called Warren, New Jersey playing soccer, basketball, wrestling, tennis, and thinking I was good at sports. As a kid, most of my interests either involved
 								 breaking things or making things. From fashioning slingshots out of dismantled mechanical pencils to designing elaborate Lego cities with pieces from different Lego sets,
@@ -97,11 +97,11 @@
 									<!-- Projects -->
 										<article id="projects">
 											<h1 class="major">Projects</h1>
-												<a href = "https://github.com/JimmyMinhLee/Introduction-CompSci-Projects" target="blank">
+												<a href = "https://github.com/voonybaboony" target="blank">
 												<h3> Maps (Python) </h3>
 													<p> Built a python application that uses machine learning to match users with nearby restaurants in the Berkeley area. Back-end logic implemented in Python, using k-means grouping algorithm. Restaurant location and data provided by the yelp API. </p>
 
-												<a href = "https://github.com/JimmyMinhLee/Introduction-CompSci-Projects" target="blank">
+												<a href = "https://github.com/voonybaboony" target="blank">
 												<h3> Scheme Interpreter (Python) </h3>
 												<p> Coded a fully functional interpreter for a subset of the Scheme language. Implemented all of the basic functions such as evaluation of call expressions, arithmetic, function definition and special forms. </p>
 										</article>
