--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 						<article id="about">
 							<h2 class="major"> Who is Varun? </h2>
-							<span class="image main"><img src="images/Varun.JPG" alt=""/></span>
+							<span class="image main"><img src="images/Varun.jpg" alt=""/></span>
 							<p>I'm currently a sophomore at the University of California, Berkeley pursuing a double major in Computer Science and Economics. I am intrigued by modern concepts such as the
 								<i>Internet of Things</i>, <i>Big Data</i>, and <i> Machine Learning </i>. I seek to work on innovative projects that disrupt the tech industry. </p>
 
