--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 						<article id="about">
 							<h2 class="major"> Who is Varun? </h2>
-							<span class="image main"><img src="../images/varun.png" alt=""/></span>
+							<span class="image main"><img src="images/varun.png" alt=""/></span>
 							<p>I'm currently a sophomore at the University of California, Berkeley pursuing a double major in Computer Science and Economics. I am intrigued by modern concepts such as the
 								<i>Internet of Things</i>, <i>Big Data</i>, and <i> Machine Learning </i>. I seek to work on innovative projects that disrupt the tech industry. </p>
 
@@ -56,7 +56,7 @@
 							</p>
 
 							<h2 class="major"> My Hobbies </h2>
-							<span class="image main"><img src="../images/guitar.png" alt=""/></span>
+							<span class="image main"><img src="images/guitar.png" alt=""/></span>
 							<p> While in the classroom I might have great focus, outside of it I definitely do not. I am always doing one hundred things at once - on the average afternoon after class you can find me
 									playing the guitar while watching Narcos on my computer while arguing with my parents over facetime about why all geniuses have messy dorms. I love to travel, as of the Summer of 2019
 									I've only had the chance to travel to 15 different countries around the world and	I hope to at least double that number by the time I am 30. I also really love music. I play the guitar,
