--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 						<article id="about">
 							<h2 class="major"> Who is Varun? </h2>
 							<span class="image main"><img src="images/varun.png" alt=""/></span>
-							<p>I'm currently a sophomore at the University of California, Berkeley pursuing a double major in Computer Science and Economics. I am intrigued by modern concepts such as the
-								<i>Internet of Things</i>, <i>Big Data</i>, and <i> Machine Learning </i>. I seek to work on innovative projects that disrupt the tech industry. </p>
+							<p>I'm currently a sophomore at the University of California, Berkeley pursuing a double major in Computer Science and Economics. I am intrigued by fast pace at which technology
+								and the use of data is evolving. Over the next few years I hope to learn more about modern software engineering concepts such as the <i>Internet of Things</i>, <i>Artificial
+								Intelligence</i>, and <i> Machine Learning </i>. I seek to work on innovative projects that disrupt the tech industry. </p>
 
 							<p>I grew up in a quiet town called Warren, New Jersey playing soccer, basketball, wrestling, tennis, and thinking I was good at sports. As a kid, most of my interests either involved
 								 breaking things or making things. From fashioning slingshots out of dismantled mechanical pencils to designing elaborate Lego cities with pieces from different Lego sets,
-								 I've always had a knack for imaginative creation.
+								 I've always had a knack for random creation.
 
 							</p>
 
@@ -60,8 +61,8 @@
 							<p> While in the classroom I might have great focus, outside of it I definitely do not. I am always doing one hundred things at once - on the average afternoon after class you can find me
 									playing the guitar while watching Narcos on my computer while arguing with my parents over facetime about why all geniuses have messy dorms. I love to travel, as of the Summer of 2019
 									I've only had the chance to travel to 15 different countries around the world and	I hope to at least double that number by the time I am 30. I also really love music. I play the guitar,
-								  piano, and I also dabble with the recorder and kazoo. I don't get too much time to watch TV at college, but my favorite shows to watch are generally those based on true stories. My two
-									favorite shows are Narcos and When They See Us, both on Netflix (I highly recommend When They See Us, its about the prosecution of the Central Park 5).</p>
+								  piano, and I also dabble with the recorder and kazoo. I don't get too much time to watch TV at college, but my favorite shows to watch are generally those based on real life and dystopias. My two
+									favorite shows are When They See Us, Narcos, and Blackmirror - all on Netflix (I highly recommend When They See Us, its about the prosecution of the Central Park 5).</p>
 							<ul class="ul-col-3">
 								<li> <b>Favorite sport: </b>Soccer!</li>
 								<li> <b>Favorite artists: </b>Young the Giant, Tame Impala, Kendrick Lamar</li>
