updates to projects page

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 									<img src="images/campuswire.png" width="100%" align="middle"/>
 									<h3> Campuswire Inc | Growth and Marketing Intern </h3>
 									<h4> July 2019 - August 2019 </h4>
-										<p> *FILL OUT* </p>
+										<p> Expanded company's client base,  </p>
 										<br> </br>
 
 									<img src="images/transcend.png" width="100%"/>
 									<h3> Transced Street Solutions | Software Developer Intern </h3>
 									<h4> June 2017 - August 2017 </h4>
-										<p> Worked on projects in HTML and JavaScript and learned basic web development. Personally created a program that compared attributes of legal documents against one another. </p>
+										<p> Worked on projects in HTML and JavaScript and learned basic web development. Personally created a program that compared attributes of legal documents against one another using a MongoDB database. </p>
 							</article>
 
 							<!-- Resume -->
@@ -98,13 +98,17 @@
 									<!-- Projects -->
 										<article id="projects">
 											<h1 class="major">Projects</h1>
-												<a href = "https://github.com/voonybaboony" target="blank">
+												<a href = "https://github.com/voonybaboony/tree/master/maps" target="blank">
 												<h3> Maps (Python) </h3>
-													<p> Built a python application that uses machine learning to match users with nearby restaurants in the Berkeley area. Back-end logic implemented in Python, using k-means grouping algorithm. Restaurant location and data provided by the yelp API. </p>
+												<p> Built a python application that uses machine learning to match users with nearby restaurants in the Berkeley area. Back-end logic implemented in Python, using k-means grouping algorithm. Restaurant location and data provided by the yelp API. </p>
 
-												<a href = "https://github.com/voonybaboony" target="blank">
+												<a href = "https://github.com/voonybaboony/tree/master/scheme" target="blank">
 												<h3> Scheme Interpreter (Python) </h3>
-												<p> Coded a fully functional interpreter for a subset of the Scheme language. Implemented all of the basic functions such as evaluation of call expressions, arithmetic, function definition and special forms. </p>
+												<p> Coded an interpreter for the Scheme programing language. Interpreter implemented all basic functions such as evaluating call expressions, evaluating equations, defining regular, lambda, and mu functions, and accounting for special forms. </p>
+
+												<a href = "https://github.com/voonybaboony/tree/master/ants" target="blank">
+												<h3> Plants vs. SomeBees (Python) </h3>
+												<p> Created a game based off of the popular Plants vs. Zombies cell phone game. Game involved use of object oriented programming, CSS gui set up in HTML, and a JavaScript back end</p>
 										</article>
 
 
