--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 												<p> Coded an interpreter for the Scheme programing language. Interpreter implemented all basic functions such as evaluating call expressions, evaluating equations, defining regular, lambda, and mu functions, and accounting for special forms. </p>
 
 												<a href = "https://github.com/voonybaboony/tree/master/ants" target="blank">
-												<h3> Plants vs. SomeBees (Python) </h3>
+												<h3> Ants vs. SomeBees (Python) </h3>
 												<p> Created a game based off of the popular Plants vs. Zombies cell phone game. Game involved use of object oriented programming, CSS gui set up in HTML, and a JavaScript back end</p>
 										</article>
 
