--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 							<!-- Resume -->
 								<article id="resume">
-									<h2 class="major">Resume</h2>
+									<h2 class="major">Resumé</h2>
 									<a href="https://voonybaboony.github.io/resume.pdf" target="blank">
 									<h3 class="major"> Link </h3>
 									<span class="image main"><img src="resume.pdf" alt=""/></span>
