--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</article>
 
 							<!-- Resume -->
-								<article id="resumé">
+								<article id="resume">
 									<h2 class="major">Resumé</h2>
 									<a href="https://voonybaboony.github.io/resume.pdf" target="blank">
 									<h3 class="major"> Link </h3>
