updated campuswire text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
 									<img src="images/campuswire.png" width="100%" align="middle"/>
 									<h3> Campuswire Inc | Growth and Marketing Intern </h3>
 									<h4> July 2019 - August 2019 </h4>
-										<p> Expanded company's client base,  </p>
+										<p> Worked with the CEO and Head of Growth to develop and execute a plan to introduce hundreds of college professors and TAs to Campuswire over the Summer.
+											Traveled with the CEO and Head of Growth to several college campuses and teaching conferences across the country and met with professors, introduced
+											them to Campuswire, and ignited viral growth on those campuses
+  </p>
 										<br> </br>
 
 									<img src="images/transcend.png" width="100%"/>
