transcend description update

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 									<img src="images/transcend.png" width="100%"/>
 									<h3> Transced Street Solutions | Software Developer Intern </h3>
 									<h4> June 2017 - August 2017 </h4>
-										<p> Worked on projects in HTML and JavaScript and learned basic web development. Personally created a program that compared attributes of legal documents against one another using a MongoDB database. </p>
+										<p> Worked on web applications and learned to use HTML and JavaScript. Designed a program that could compare the attributes of two legal documents against each other using
+												a MongoDB database and JavaScript back-end. </p>
 							</article>
 
 							<!-- Resume -->
