updated project descriptions

--- a/index.html
+++ b/index.html
@@ -104,15 +104,18 @@
 											<h1 class="major">Projects</h1>
 												<a href = "https://github.com/voonybaboony/tree/master/maps" target="blank">
 												<h3> Maps (Python) </h3>
-												<p> Built a python application that uses machine learning to match users with nearby restaurants in the Berkeley area. Back-end logic implemented in Python, using k-means grouping algorithm. Restaurant location and data provided by the yelp API. </p>
+												<p> Built a python application that uses k-means machine learning algorithm to match users with nearby restaurants in the Berkeley area based on their user preferences.
+													  The back-end logic was built with Python programming language, using Yelp's available API and data to find restaurant locations. </p>
 
 												<a href = "https://github.com/voonybaboony/tree/master/scheme" target="blank">
 												<h3> Scheme Interpreter (Python) </h3>
-												<p> Coded an interpreter for the Scheme programing language. Interpreter implemented all basic functions such as evaluating call expressions, evaluating equations, defining regular, lambda, and mu functions, and accounting for special forms. </p>
+												<p> Coded an interpreter for the Scheme programing language. Interpreter implemented all basic functions such as evaluating call expressions, evaluating equations, defining regular,
+													  lambda, and mu functions, and accounting for special forms. </p>
 
 												<a href = "https://github.com/voonybaboony/tree/master/ants" target="blank">
 												<h3> Ants vs. SomeBees (Python) </h3>
-												<p> Created a game based off of the popular Plants vs. Zombies cell phone game. Game involved use of object oriented programming, CSS gui set up in HTML, and a JavaScript back end</p>
+												<p> Created a game based off of the popular Plants vs. Zombies cell phone game. Game involved use of object oriented programming, CSS gui set up in HTML, and a JavaScript back end
+												</p>
 										</article>
 
 
