--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 									<img src="images/campuswire.png" width="100%" align="middle"/>
 									<h3> Campuswire Inc | Growth and Marketing Intern </h3>
 									<h4> July 2019 - August 2019 </h4>
-										<p> Worked with the CEO and Head of Growth to develop and execute a plan to introduce hundreds of college professors and TAs to Campuswire over the Summer.
-											Traveled with the CEO and Head of Growth to several college campuses and teaching conferences across the country and met with professors, introduced
-											them to Campuswire, and ignited viral growth on those campuses
+										<p> Worked with CEO of a fast growing start up to develop and execute a plan to introduce hundreds of professors and TAs to our site.
+											 Researched and contacted potential clients, and provided a live demo to professors across the country to sell them our platform.
+											 Pitched multimedia marketing strategies based on extensive marketing research to expand our professor and student client base
   </p>
 										<br> </br>
 
